--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.2",
+    "google-map-react": "^2.2.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
