--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   "plugins": ["react", "prettier"],
   "extends": [
     "next/babel",
-    // "airbnb",
+    "airbnb",
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended"
