--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@react-oauth/google": "^0.6.1",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.2",
@@ -21,6 +22,8 @@
     "react-query": "^3.39.2"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.31.0",
