--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-query": "^3.39.2",
-    "slick-carousel": "^1.8.1"
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.31.0",
