--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.31.0",
