--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "prettier.printWidth": 120,
+  "editor.formatOnSave": true
 }
