--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.2",
     "google-map-react": "^2.2.0",
+    "moment": "^2.29.4",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
