--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
-    "recoil": "^0.7.6"
+    "react-slick": "^0.29.0",
+    "recoil": "^0.7.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
