--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "styled-components": "^5.3.6"
   }
 }
