--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "recoil": "^0.7.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
