--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.32",
     "@next/font": "13.1.2",
+    "@radix-ui/colors": "github:radix-ui/colors",
+    "@radix-ui/react-radio-group": "^1.1.2",
     "@react-google-maps/api": "^2.18.1",
     "@react-oauth/google": "^0.6.1",
     "axios": "^1.2.2",
