--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-radio-group": "^1.1.2",
     "@react-google-maps/api": "^2.18.1",
     "@react-oauth/google": "^0.6.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
